# Game-boy

./: .gitignore  AGENTS.md  AGV电机诊断终端项目复盘与软件结构说明.docx  CODEX_HISTORY.md  ESP32_CAN_Dongle_技术指导书.md  ESP32_RGB30_通信协议与编译环境.md  Godot_诊断终端开发教程.md  Zephyr_ESP32_Mac学习指南.md  手持诊断与调试工具.docx  手持诊断工具_软件开发教程.md
ANT/: README.md
dongle_firmware/: README.md  零基础操作教程.md
dongle_firmware/can_dongle/: .gitignore  CMakeLists.txt  prj.conf
dongle_firmware/can_dongle/.cache/clangd/index/: can_raw.c.4BD530447A5A9011.idx  can_raw.h.67BC93B420A06521.idx  canopen_basic.c.90717A1BDF70845A.idx  canopen_basic.h.42453F97A57F15FB.idx  json_protocol.c.B5E8F1C408A861DA.idx  json_protocol.h.6DFAF738A95A7550.idx  main.c.A5D55A3B04102BC9.idx  udp_comm.c.77390CE23C618617.idx  udp_comm.h.0844EF7EC0988C95.idx  watchdog.c.F646D79EE70E0544.idx  watchdog.h.7D67EE329B8B10BE.idx  wifi_config.h.41010641305BEDCA.idx  wifi_secrets.h.939FCCDE668C5C33.idx
dongle_firmware/can_dongle/boards/: esp32s3_devkitc.overlay  esp32s3_devkitm.overlay
dongle_firmware/can_dongle/src/: can_raw.c  can_raw.h  canopen_basic.c  canopen_basic.h  command_handler.c  command_handler.h  command_policy.c  command_policy.h  json_protocol.c  json_protocol.h  main.c  motor_state.h  motor_status_policy.c  motor_status_policy.h  sdo_transport.c  sdo_transport.h  telemetry.c  telemetry.h  telemetry_policy.c  telemetry_policy.h  udp_comm.c  udp_comm.h  watchdog.c  watchdog.h  wifi_config.h  wifi_secrets.example.h
godot_terminal/: .gitignore  API接口文档.md  README.md  azure-pipelines.yml  export_presets.cfg  project.godot
(+192 files in other folders)
